<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BackEnd">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/background" />

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="9dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/nameAdd"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textColor="@color/text"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/countAdd"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:inputType="number"
            android:entries="@array/counts" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="9dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/text"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/priceAdd"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:layout_marginLeft="8dp" />
    </LinearLayout>

    <Button
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="9dp"
        android:text="@string/add"
        android:onClick="add"  />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="171dp"
        android:background="@color/background" />

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/nameUpd"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="9dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textColor="@color/text"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/countUpd"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:inputType="number"
            android:entries="@array/counts" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="437dp"
        android:layout_marginEnd="9dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/text"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/priceUpd"
            android:inputType="number"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp" />
    </LinearLayout>

    <Button
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="494dp"
        android:layout_marginEnd="6dp"
        android:text="@string/update"
        android:onClick="update"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        android:onClick="toStoreFront"
        android:text="@string/toStore" />
</RelativeLayout>